--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,6 +1,9 @@
 .header {
-  position: relative;
+  position: sticky;
+  top: 0;
   max-width: fit-content;
+  padding-bottom: 15px;
+  background-color: rgba(218, 217, 246, 0.6);
 }
 
 .header__title {
@@ -19,8 +22,8 @@
 .header__image {
   width: 55px;
   position: absolute;
-  top: 80px;
-  right: 20px;
+  top: 50px;
+  right: 15px;
 }
 
 .nav {
@@ -31,23 +34,6 @@
   width: 40%;
 }
 
-.nav__links {
-  list-style: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  font-family: "Lexend", sans-serif;
-  font-size: 1.5em;
-  color: 1395eE;
-  margin: 0 0 10px 0;
-}
-
-.nav__link-name {
-  margin: 0;
-}
-
-.nav__img {
-  width: 50px;
-  margin: 0 15px 0 15px;
+@media all and (max-width: 700px) {
+  .header;
 }
