--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,9 @@
 .page {
   background-color: #dad9f6;
+  /*
   display: flex;
   flex-direction: column;
+  */
   margin: 0;
   padding: 0;
   box-sizing: border-box;
