--- a/pages/index.css
+++ b/pages/index.css
@@ -3,4 +3,5 @@
 @import url(../blocks/page.css);
 @import url(../blocks/content.css);
 @import url(../blocks/header.css);
+@import url(../blocks/nav.css);
 @import url(../blocks/footer.css);
